--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/webpack -d",
+    "server": "babel-node server.js | ./node_modules/.bin/webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -26,6 +28,9 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-server": "^1.16.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
